<resources>
	<string name="app_name">Reciclapp</string>

	<!-- Fragment Acceso -->
	<string name="fragment_acceso_ingresar">Ingresar</string>
	<string name="fragment_acceso_registro">Registro</string>
	<string name="fragment_acceso_quienes_somos">¿Quiénes somos?</string>
	<string name="fragment_acceso_content_logo">Logo de la CRQ</string>

	<!-- Fragment Login -->
	<string name="fragment_login_cedula">Cedula</string>
	<string name="fragment_login_contrasenia">Contraseña</string>
	<string name="fragment_login_ingresar">Ingresar</string>
	<string name="fragment_login_cuenta_desconocida">La cedula y/o contraseña no coinciden con nuestros registros.</string>

	<!-- Fragment Registro -->
	<string name="fragment_registro_nombre">Nombre Completo</string>
	<string name="fragment_registro_cedula">Cedula</string>
	<string name="fragment_registro_contrasenia">Contraseña</string>
	<string name="fragment_registro_correo">Correo Electronico</string>
	<string name="fragment_registro_direccion">Direccion</string>
	<string name="fragment_registro_registrar">Registrar</string>

	<!-- Home Activity -->
	<string name="title_activity_home">HomeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>

	<!-- Menu Nav -->
	<string name="menu_home">Inicio</string>
	<string name="menu_perfil">Perfil</string>
	<string name="menu_retiros">Retiros</string>
	<string name="menu_citas">Citas</string>
	<string name="menu_recolectores">Recolectores</string>
	<string name="menu_compradores">Compradores</string>
	<string name="menu_estadisticas">Estadísticas</string>
	<string name="menu_ventas">Ventas</string>
	<string name="menu_wiki">Wiki</string>
	<string name="menu_rutas">Rutas</string>
	<string name="menu_logout">Cerrar Sesión</string>
	<string name="nav_header_title">Usuario</string>
	<string name="nav_header_admin_title">Admin</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>

	<!-- Fragment Home -->
	<string name="fragment_home_usuario_estadisticas">Estadísticas de Aprovechables</string>
	<string name="fragment_home_usuario_carton">Cartón</string>
	<string name="fragment_home_usuario_plastico">Plástico</string>
	<string name="fragment_home_usuario_vidrio">Vidrio</string>
	<string name="fragment_home_usuario_default_int">0</string>
	<string name="fragment_home_usuario_default_ultimos_mes">Último mes</string>
	<string name="fragment_home_usuario_ver_mas">Ver más...</string>
	<string name="fragment_home_usuario_info">Información General</string>
	<string name="fragment_home_usuario_recolectores">Recolectores</string>
	<string name="fragment_home_usuario_citas">Citas</string>
	<string name="fragment_home_usuario_compradores">Compradores</string>
	<string name="fragment_home_usuario_servicio_al_cliente">Servicio al cliente</string>
	<string name="fragment_home_usuario_buzon_de_sugerencias">Búzon de sugerencias</string>
	<string name="fragment_home_usuario_ayuda">Ayuda</string>

	<!-- Fragment Reciclar 1 -->
	<string name="fragment_reciclar1_titulo">CUENTA Y RECICLA</string>
	<string name="fragment_reciclar1_subtitulo">tu material reciclable</string>
	<string name="fragment_reciclar1_checkboxText">¿ Tienes papel para reciclar ?</string>
	<string name="fragment_reciclar1_siguiente">Siguiente</string>
	<string name="fragment_reciclar1_unidades">unidades</string>
	<string name="fragment_reciclar1_carton">Cartón</string>
	<string name="fragment_reciclar1_vidrio">Vidrio</string>
	<string name="fragment_reciclar1_plastico_pet">Plástico PET</string>

	<!-- Fragment Reciclar 2 -->
	<string name="fragment_reciclar2_titulo">DIA Y HORA DE RETIRO</string>
	<string name="fragment_reciclar2_fecha_retiro">Fecha de retiro</string>
	<string name="fragment_reciclar2_hora_retiro">Hora de retiro</string>
	<string name="fragment_reciclar2_siguiente">Siguiente</string>

	<!-- Fragment Reciclar 3 -->
	<string name="fragment_reciclar3_titulo">Confirmar el retiro</string>
	<string name="fragment_reciclar3_confirmar">Confirmar</string>

	<!-- Fragment Perfil -->
	<string name="fragment_perfil_titulo">Información personal</string>
	<string name="fragment_perfil_nombre">Nombre Completo</string>
	<string name="fragment_perfil_celular">Celular</string>
	<string name="fragment_perfil_correo">Correo</string>
	<string name="fragment_perfil_direccion">Dirección</string>
	<string name="fragment_perfil_guardar">Guardar</string>
	<string name="fragment_perfil_eliminar_cuenta">Eliminar Cuenta</string>
	<string name="fragment_perfil_cambiar_contrasenia">Cambiar contraseña</string>

	<!-- Fragment Recolector -->
	<string name="fragment_recolector_nombre">Nombre</string>
	<string name="fragment_recolector_cedula">Cédula</string>
	<string name="fragment_recolecto_celular">Celular</string>
	<string name="fragment_recolector_correo">Correo</string>
	<string name="fragment_recolector_direccion">Direccion</string>
	<string name="fragment_recolector_guardar">Guardar</string>
	<string name="fragment_recolector_titulo">Información personal</string>
	<string name="fragment_recolector_eliminar">Eliminar</string>

	<!-- Fragment Comprador -->
	<string name="fragment_comprador_titulo">Información personal</string>
	<string name="fragment_comprador_Nit">NIT</string>
	<string name="fragment_comprador_nombre">Nombre</string>
	<string name="fragment_comprador_correo">Correo</string>
	<string name="fragment_comprador_celular">Celular</string>
	<string name="fragment_comprador_guardar">Guardar</string>

	<!-- Otros -->
	<string name="list_element_cancelar">Cancelar</string>
	<string name="hello_blank_fragment">Proximamente...</string>
    <string name="fragment_lista_recolector">Recolectores</string>
	<string name="fragment_lista_comprador">Compradores</string>
</resources>