<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/home_admin_nav"
	app:startDestination="@id/nav_home_admin">
	<fragment
		android:id="@+id/nav_home_admin"
		android:name="co.edu.uniquindio.reciclapp.ui.fragment.AdminHomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_admin_home" />
	<fragment
		android:id="@+id/nav_gallery"
		android:name="co.edu.uniquindio.reciclapp.ui.fragment.PerfilFragment"
		android:label="@string/menu_perfil"
		tools:layout="@layout/fragment_perfil" />
	<fragment
		android:id="@+id/nav_slideshow"
		android:name="co.edu.uniquindio.reciclapp.ui.fragment.RetirosFragment"
		android:label="@string/menu_retiros"
		tools:layout="@layout/fragment_retiros" />
	<fragment
		android:id="@+id/nav_recolector"
		android:name="co.edu.uniquindio.reciclapp.ui.fragment.RecolectorFragment"
		android:label="@string/menu_recolectores"
		tools:layout="@layout/fragment_recolector" />
	<fragment
		android:id="@+id/nav_comprador"
		android:name="co.edu.uniquindio.reciclapp.ui.fragment.CompradorFragment"
		android:label="@string/menu_compradores"
		tools:layout="@layout/fragment_comprador" />
</navigation>