<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item android:title="Recicla">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_slideshow"
                        android:icon="@drawable/ic_baseline_assignment_24"
                        android:title="@string/menu_retiros" />
                    <item
                        android:icon="@drawable/ic_baseline_menu_book_24"
                        android:title="@string/menu_wiki" />
                </group>
            </menu>
        </item>


        <item android:title="Cuenta">
            <menu>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/menu_perfil" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/menu_logout" />
            </menu>
        </item>
    </group>

</menu>