<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccesoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/primario"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:contentDescription="@string/fragment_acceso_content_logo"
            android:src="@drawable/logo_crq_blanco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAccesoIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secundario"
            android:text="@string/fragment_acceso_ingresar" />

        <Button
            android:id="@+id/btnAccesoRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primario"
            android:text="@string/fragment_acceso_registro" />

        <Button
            android:id="@+id/btnAccesoQuienesSomos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secundario_variante"
            android:text="@string/fragment_acceso_quienes_somos" />
    </LinearLayout>

</LinearLayout>