<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompradorFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/fragment_comprador_titulo"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/txtCompradorNIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/fragment_comprador_Nit"
                android:inputType="number"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txtCompradorNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/fragment_comprador_nombre"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txtCompradorCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/fragment_comprador_celular"
                android:inputType="phone"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txtCompradorCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/fragment_comprador_correo"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnCompradorGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/fragment_recolector_guardar" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>